Jul 13, 2016 - chris ---------------------------------------------------
o Fixed bug when ups_cursor_overwrite would overwrite a transactional record
	instead of the (correct) btree record

Jun 17, 2016 - chris ---------------------------------------------------
o Removed the libuv dependency; switched to boost::asio instead

Jun 3, 2016 - chris ---------------------------------------------------
o Performance improvements when using many duplicate keys (with a
	duplicate table spanning multiple pages)

Jun 2, 2016 - chris ---------------------------------------------------
o Fixed another bug in the duplicate key consolidation

Jun 1, 2016 - chris ---------------------------------------------------
o Fixed a bug in the duplicate key consolidation

May 29, 2016 - chris ---------------------------------------------------
o issue #80: fixed streamvbyte compilation for c++11

May 26, 2016 - chris ---------------------------------------------------
o Committed transactions are now batched before they are flushed to disk

May 04, 2016 - chris ---------------------------------------------------
o issue #79: fixed crc32 failure when reusing deleted blobs spanning
	multiple pages

Apr 27, 2016 - chris ---------------------------------------------------
o Fixed a bug when recovering duplicates that were inserted with one of the
	UPS_DUPLICATE_INSERT_* flags

Apr 26, 2016 - chris ---------------------------------------------------
o The integer compression codecs UPS_COMPRESSOR_UINT32_GROUPVARINT and
	UPS_COMPRESSOR_UINT32_STREAMVBYTE are now deprecated
o The integer compression codec UPS_COMPRESSOR_UINT32_MASKEDVBYTE is now a
	synonym for UPS_COMPRESSOR_UINT32_VARBYTE, but uses the MaskedVbyte
	library under the hood.

Apr 19, 2016 - chris ---------------------------------------------------
o Improved the journalling performance

Mar 20 2016 - chris ---------------------------------------------------
                      release of upscaledb-2.2.0
