@@ -26,5 +26,6 @@ EXTRA_DIST = \
 	de_crupp_upscaledb_Parameter.h \
 	de_crupp_upscaledb_Transaction.h \
 	de_crupp_upscaledb_Result.h \
+	de_crupp_upscaledb_Operation.h \
 	de_crupp_upscaledb_Version.h
 
