@@ -1,0 +1,13 @@
+/* DO NOT EDIT THIS FILE - it is machine generated */
+#include <jni.h>
+/* Header for class de_crupp_upscaledb_Operation */
+
+#ifndef _Included_de_crupp_upscaledb_Operation
+#define _Included_de_crupp_upscaledb_Operation
+#ifdef __cplusplus
+extern "C" {
+#endif
+#ifdef __cplusplus
+}
+#endif
+#endif
